# CC-Fractal-Suite

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  compile_notes.txt
houdini17.5/help/nodes/cop2/: cc--fractal_lyapunov.txt  cc--fractal_mandelbrot.txt  cc--fractal_pickover.txt
houdini18.0/help/nodes/cop2/: cc--fractal_buddhabrot.txt  cc--fractal_matte.txt  cc--fractal_pickover.txt
include/: COP2_Buddhabrot.h  COP2_FractalMatte.h  COP2_Lyapunov.h  COP2_Mandelbrot.h  COP2_Pickover.h  Fractal.h  FractalNode.h  FractalSpace.h  Lyapunov.h  Mandelbrot.h  StashData.h  register.h  typedefs.h
src/: Buddhabrot.cpp  Buddhabrot.h  CC_Fractal_Suite.cpp  CC_Fractal_Suite.h  CMakeLists.txt  COP2_Buddhabrot.cpp  COP2_Buddhabrot.h  COP2_FractalMatte.cpp  COP2_FractalMatte.h  COP2_Lyapunov.cpp  COP2_Lyapunov.h  COP2_Mandelbrot.cpp  COP2_Mandelbrot.h  COP2_Pickover.cpp  COP2_Pickover.h  Fractal.cpp  Fractal.h  FractalNode.cpp  FractalNode.h  FractalSpace.cpp  FractalSpace.h  Lyapunov.cpp  Lyapunov.h  Mandelbrot.cpp  Mandelbrot.h  StashData.cpp  StashData.h  register.cpp  typedefs.h
